properties/app/outpatient/iptables.rules
# Generated by iptables-save v1.4.21 on Mon Apr 15 15:00:20 2019
*nat
:PREROUTING ACCEPT [10488669:631024152]
:INPUT ACCEPT [9988747:581771016]
:OUTPUT ACCEPT [464596:74289742]
:POSTROUTING ACCEPT [464596:74289742]
:OUTPUT_direct - [0:0]
:POSTROUTING_ZONES - [0:0]
:POSTROUTING_ZONES_SOURCE - [0:0]
:POSTROUTING_direct - [0:0]
:POST_public - [0:0]
:POST_public_allow - [0:0]
:POST_public_deny - [0:0]
:POST_public_log - [0:0]
:PREROUTING_ZONES - [0:0]
:PREROUTING_ZONES_SOURCE - [0:0]
:PREROUTING_direct - [0:0]
:PRE_public - [0:0]
:PRE_public_allow - [0:0]
:PRE_public_deny - [0:0]
:PRE_public_log - [0:0]
-A PREROUTING -j PREROUTING_direct
-A PREROUTING -j PREROUTING_ZONES_SOURCE
-A PREROUTING -j PREROUTING_ZONES
-A OUTPUT -j OUTPUT_direct
-A POSTROUTING -j POSTROUTING_direct
-A POSTROUTING -j POSTROUTING_ZONES_SOURCE
-A POSTROUTING -j POSTROUTING_ZONES
-A POSTROUTING_ZONES -o ens192 -g POST_public
-A POSTROUTING_ZONES -g POST_public
-A POST_public -j POST_public_log
-A POST_public -j POST_public_deny
-A POST_public -j POST_public_allow
-A PREROUTING_ZONES -i ens192 -g PRE_public
-A PREROUTING_ZONES -g PRE_public
-A PRE_public -j PRE_public_log
-A PRE_public -j PRE_public_deny
-A PRE_public -j PRE_public_allow
COMMIT
# Completed on Mon Apr 15 15:00:20 2019
# Generated by iptables-save v1.4.21 on Mon Apr 15 15:00:20 2019
*mangle
:PREROUTING ACCEPT [194808377:64030515019]
:INPUT ACCEPT [194808377:64030515019]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [164345503:475348970453]
:POSTROUTING ACCEPT [164345679:475348984181]
:FORWARD_direct - [0:0]
:INPUT_direct - [0:0]
:OUTPUT_direct - [0:0]
:POSTROUTING_direct - [0:0]
:PREROUTING_ZONES - [0:0]
:PREROUTING_ZONES_SOURCE - [0:0]
:PREROUTING_direct - [0:0]
:PRE_public - [0:0]
:PRE_public_allow - [0:0]
:PRE_public_deny - [0:0]
:PRE_public_log - [0:0]
-A PREROUTING -j PREROUTING_direct
-A PREROUTING -j PREROUTING_ZONES_SOURCE
-A PREROUTING -j PREROUTING_ZONES
-A INPUT -j INPUT_direct
-A FORWARD -j FORWARD_direct
-A OUTPUT -j OUTPUT_direct
-A POSTROUTING -j POSTROUTING_direct
-A PREROUTING_ZONES -i ens192 -g PRE_public
-A PREROUTING_ZONES -g PRE_public
-A PRE_public -j PRE_public_log
-A PRE_public -j PRE_public_deny
-A PRE_public -j PRE_public_allow
COMMIT
# Completed on Mon Apr 15 15:00:20 2019
# Generated by iptables-save v1.4.21 on Mon Apr 15 15:00:20 2019
*security
:INPUT ACCEPT [193139929:63922034261]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [164345503:475348970453]
:FORWARD_direct - [0:0]
:INPUT_direct - [0:0]
:OUTPUT_direct - [0:0]
-A INPUT -j INPUT_direct
-A FORWARD -j FORWARD_direct
-A OUTPUT -j OUTPUT_direct
COMMIT
# Completed on Mon Apr 15 15:00:20 2019
# Generated by iptables-save v1.4.21 on Mon Apr 15 15:00:20 2019
*raw
:PREROUTING ACCEPT [194808377:64030515019]
:OUTPUT ACCEPT [164345503:475348970453]
:OUTPUT_direct - [0:0]
:PREROUTING_ZONES - [0:0]
:PREROUTING_ZONES_SOURCE - [0:0]
:PREROUTING_direct - [0:0]
:PRE_public - [0:0]
:PRE_public_allow - [0:0]
:PRE_public_deny - [0:0]
:PRE_public_log - [0:0]
-A PREROUTING -j PREROUTING_direct
-A PREROUTING -j PREROUTING_ZONES_SOURCE
-A PREROUTING -j PREROUTING_ZONES
-A OUTPUT -j OUTPUT_direct
-A PREROUTING_ZONES -i ens192 -g PRE_public
-A PREROUTING_ZONES -g PRE_public
-A PRE_public -j PRE_public_log
-A PRE_public -j PRE_public_deny
-A PRE_public -j PRE_public_allow
COMMIT
# Completed on Mon Apr 15 15:00:20 2019
# Generated by iptables-save v1.4.21 on Mon Apr 15 15:00:20 2019
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [12434:50613163]
:FORWARD_IN_ZONES - [0:0]
:FORWARD_IN_ZONES_SOURCE - [0:0]
:FORWARD_OUT_ZONES - [0:0]
:FORWARD_OUT_ZONES_SOURCE - [0:0]
:FORWARD_direct - [0:0]
:FWDI_public - [0:0]
:FWDI_public_allow - [0:0]
:FWDI_public_deny - [0:0]
:FWDI_public_log - [0:0]
:FWDO_public - [0:0]
:FWDO_public_allow - [0:0]
:FWDO_public_deny - [0:0]
:FWDO_public_log - [0:0]
:INPUT_ZONES - [0:0]
:INPUT_ZONES_SOURCE - [0:0]
:INPUT_direct - [0:0]
:IN_public - [0:0]
:IN_public_allow - [0:0]
:IN_public_deny - [0:0]
:IN_public_log - [0:0]
:OUTPUT_direct - [0:0]
-A INPUT -p tcp -m tcp --dport 4120 -j ACCEPT
-A INPUT -p udp -m udp --dport 4030:4090 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 4030:4090 -j ACCEPT
-A INPUT -p udp -m udp --dport 7030:7090 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 7030:7090 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 7030:7530 -j ACCEPT
-A INPUT -p udp -m udp --dport 4090 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 4090 -j ACCEPT
-A INPUT -p udp -m udp --dport 4030 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 4030 -j ACCEPT
-A INPUT -p udp -m udp --dport 7090 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 7090 -j ACCEPT
-A INPUT -p udp -m udp --dport 7030 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 7030 -j ACCEPT
-A INPUT -p udp -m udp --dport 7040 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 7040 -j ACCEPT
-A INPUT -p udp -m udp --dport 7030 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 7030 -j ACCEPT
-A INPUT -p udp -m udp --dport 4040 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 4040 -j ACCEPT
-A INPUT -p udp -m udp --dport 4030 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 4030 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 4040 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 4030 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 4030 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 4040 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 4030 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3000 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -j INPUT_direct
-A INPUT -j INPUT_ZONES_SOURCE
-A INPUT -j INPUT_ZONES
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A INPUT -p tcp -m multiport --dports 7030:7530 -j ACCEPT
-A INPUT -p udp -m multiport --dports 7030:7530 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 4030:4530 -j ACCEPT
-A INPUT -p udp -m multiport --dports 4030:4530 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 7030:7530 -j ACCEPT
-A INPUT -p udp -m multiport --dports 7030:7530 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 4030:4530 -j ACCEPT
-A INPUT -p udp -m multiport --dports 4030:4530 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 7030:7530 -j ACCEPT
-A INPUT -p udp -m multiport --dports 7030:7530 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 4030:4530 -j ACCEPT
-A INPUT -p udp -m multiport --dports 4030:4530 -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i lo -j ACCEPT
-A FORWARD -j FORWARD_direct
-A FORWARD -j FORWARD_IN_ZONES_SOURCE
-A FORWARD -j FORWARD_IN_ZONES
-A FORWARD -j FORWARD_OUT_ZONES_SOURCE
-A FORWARD -j FORWARD_OUT_ZONES
-A FORWARD -m conntrack --ctstate INVALID -j DROP
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A OUTPUT -p tcp -m tcp --dport 4120 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 4030:4090 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 4030:4090 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 7030:7090 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 7030:7090 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 4090 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 4090 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 4030 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 4030 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 7090 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 7090 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 7030 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 7030 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 7040 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 7040 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 7040 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 7030 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 7030 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 4040 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 4040 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 4030 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 4030 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 4040 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 4040 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 4030 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 3000 -j ACCEPT
-A OUTPUT -j OUTPUT_direct
-A OUTPUT -p tcp -m multiport --dports 7030:7530 -j ACCEPT
-A OUTPUT -p udp -m multiport --dports 7030:7530 -j ACCEPT
-A OUTPUT -p tcp -m multiport --dports 4030:4530 -j ACCEPT
-A OUTPUT -p udp -m multiport --dports 4030:4530 -j ACCEPT
-A FORWARD_IN_ZONES -i ens192 -g FWDI_public
-A FORWARD_IN_ZONES -g FWDI_public
-A FORWARD_OUT_ZONES -o ens192 -g FWDO_public
-A FORWARD_OUT_ZONES -g FWDO_public
-A FWDI_public -j FWDI_public_log
-A FWDI_public -j FWDI_public_deny
-A FWDI_public -j FWDI_public_allow
-A FWDI_public -p icmp -j ACCEPT
-A FWDO_public -j FWDO_public_log
-A FWDO_public -j FWDO_public_deny
-A FWDO_public -j FWDO_public_allow
-A INPUT_ZONES -i ens192 -g IN_public
-A INPUT_ZONES -g IN_public
-A IN_public -j IN_public_log
-A IN_public -j IN_public_deny
-A IN_public -j IN_public_allow
-A IN_public -p icmp -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 5666 -m conntrack --ctstate NEW -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 5667 -m conntrack --ctstate NEW -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 8080 -m conntrack --ctstate NEW -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 9990 -m conntrack --ctstate NEW -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 6443 -m conntrack --ctstate NEW -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 80 -m conntrack --ctstate NEW -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 443 -m conntrack --ctstate NEW -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 8009 -m conntrack --ctstate NEW -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 8443 -m conntrack --ctstate NEW -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 9943 -m conntrack --ctstate NEW -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 9980 -m conntrack --ctstate NEW -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 9981 -m conntrack --ctstate NEW -j ACCEPT
COMMIT
# Completed on Mon Apr 15 15:00:20 2019
